fix(toc): fix mobile word wrap bug

--- a/src/_sass/pages/_how-to-go-contactless.scss
+++ b/src/_sass/pages/_how-to-go-contactless.scss
@@ -92,6 +92,7 @@
         border-top-color: white;
         .h5 a {
           color: $primary;
+          white-space: break-spaces;
         }
       }
     }
